added tests 4 handlers
