# docs/swagger.json
@@ -35,8 +35,8 @@
                     }
                 }
             },
-            "put": {
-                "description": "update actor",
+            "post": {
+                "description": "insert actor",
                 "consumes": [
                     "application/json"
                 ],
@@ -46,8 +46,8 @@
                 "tags": [
                     "actors"
                 ],
-                "summary": "UpdateActor",
-                "operationId": "update-actor",
+                "summary": "InsertActor",
+                "operationId": "insert-actor",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -62,9 +62,11 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "insert actor",
+            }
+        },
+        "/api/actors{id}": {
+            "put": {
+                "description": "update actor",
                 "consumes": [
                     "application/json"
                 ],
@@ -74,8 +76,8 @@
                 "tags": [
                     "actors"
                 ],
-                "summary": "InsertActor",
-                "operationId": "insert-actor",
+                "summary": "UpdateActor",
+                "operationId": "update-actor",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -121,16 +123,49 @@
             }
         },
         "/api/cinemas": {
-            "get": {
-                "description": "get all cinemas",
+            "post": {
+                "description": "insert cinema",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "cinemas"
                 ],
-                "summary": "GetAllCinemas",
-                "operationId": "get-cinemas",
+                "summary": "InsertCinema",
+                "operationId": "insert-cinemas",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/cinemas/search": {
+            "post": {
+                "description": "search cinema",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cinemas"
+                ],
+                "summary": "SearchCinema",
+                "operationId": "search-cinemas",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -148,7 +183,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/cinemas{id}": {
             "put": {
                 "description": "update cinema",
                 "consumes": [
@@ -162,34 +199,6 @@
                 ],
                 "summary": "UpdateCinema",
                 "operationId": "update-cinemas",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "insert cinema",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "cinemas"
-                ],
-                "summary": "InsertCinema",
-                "operationId": "insert-cinemas",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -231,20 +240,17 @@
                 }
             }
         },
-        "/api/cinemas/search": {
-            "post": {
-                "description": "search cinema",
-                "consumes": [
-                    "application/json"
-                ],
+        "/api/cinemas{sort}": {
+            "get": {
+                "description": "get all cinemas",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "cinemas"
                 ],
-                "summary": "SearchCinema",
-                "operationId": "search-cinemas",
+                "summary": "GetAllCinemas",
+                "operationId": "get-cinemas",
                 "responses": {
                     "200": {
                         "description": "OK",
